# firecrawl-examples

./: README.md  main.py  requirements.txt  restaurant_web_crawler.py
<examples/job_market_intelligence_agent/: job_market_agent.py>
examples/ai_optimized_crawler/: README.md  main.py  requirements.txt
examples/ai_research_assistant/: README.md  package.json  tsconfig.json
examples/ai_training_data_collector/: .env.example  README.md  __init__.py  collector.py  langflow_example.py  requirements.txt
examples/api_integration_assistant/: api_assistant.py  requirements.txt
examples/educational_content_crawler/: README.md  requirements.txt
examples/firecrawl_news_analysis/: .env.example  README.md  config.py  main.py  requirements.txt
examples/gpt_knowledge_crawler/: .env.example  README.md  main.py  requirements.txt
examples/kafka_docs_streaming/: Dockerfile  README.md  config.yaml  crawler.py  monitor.py  requirements.txt  viewer.py
examples/multimodal_crawler/: README.md  main.py  requirements.txt
firecrawl_multi_agent_research/: .env.example  README.md  requirements.txt  research_agent.py
flowsync/: Cargo.toml  README.md  pubspec.yaml
flowsync/core/src/: lib.rs
flowsync/lib/: main.dart
flowsync/lib/services/: theme_service.dart
job_insights_web_crawler/: job_crawler.py
multi_agent_job_crawler/: .env.example  README.md  requirements.txt
research_agent/: agent.py  data_processor.py  language_detector.py  synthesizer.py
research_trend_ai_agent/: README.md  config.yaml  requirements.txt  research_agent.py
(+29 files in other folders)
